--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
     <div class="container-fluid py-5" id="story">
         <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6>
                 <h1 class="font-secondary display-4">Our Love Story</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -171,7 +170,11 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">GETTING OLDER TOGETHER</h4>
-                            <p class="m-0">Lorem elitr magna stet rebum dolores sed. Est stet labore est lorem lorem at amet sea, eos tempor rebum, labore amet ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd stet amet est dolor elitr.</p>
+                            <p class="m-0">Time has passed, but their sparkle never faded. From young love to golden years, they’ve walked life hand in hand — growing not just older, but stronger, closer, and even more in love.
+
+<br><br>Celebrating 50 years around the sun, they’re proof that growing older together is the sweetest kind of journey. Still laughing, still dancing, still choosing each other — every single day.
+
+<br><br><strong>Because love doesn’t age — it only shines brighter.</strong></p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
