--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">SilverLover '25</h3>
                             </div>
-                           <!-- <button type="button" class="btn-play mx-auto" data-toggle="modal"
+                            <h4 class="text-uppercase font-weight-normal text-white m-4" style="letter-spacing: 5px;">06.14.2025 </h4>
+                         <!-- <button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                                 <span></span>
                             </button>-->
@@ -86,6 +87,8 @@
                                 data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                                 <span></span>
                             </button>-->
+                            <h4 class="text-uppercase font-weight-normal text-white m-4" style="letter-spacing: 5px;">06.14.2025</h4>
+
                         </div>
                     </div>
                 </div>
@@ -240,7 +243,7 @@
         <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Event</h6>
-                <h1 class="font-secondary display-4">Our Wedding Event</h1>
+                <h1 class="font-secondary display-4">Our Renewal of Vows</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row justify-content-center">
@@ -252,10 +255,10 @@
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
-                        <h4 class="mb-3">WEDDING CEREMONY</h4>
+                        <h4 class="mb-3">CEREMONY</h4>
                         <p class="mb-0">Holy Cross Parish Church</p>
                         <p class="mb-0">Poblacion, Kolambugan, Lanao del Norte</p>
-                        <p class="mb-3">9:00 AM | Saturday</p>
+                        <p class="mb-3">June 14, 2025 at 9:00 AM | Saturday</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -305,12 +308,12 @@
             <div class="col-lg-6" >
                 <div class="section-title position-relative text-center">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">RSVP</h6>
-                    <h1 class="font-secondary display-4">Join Our Party</h1>
+                    <h1 class="font-secondary display-4">Join Our Celebration</h1>
                     <i class="far fa-heart text-dark"></i>
                </div>
                
                 <div class="text-center">
-                <p>We kindly ask for your RSVP to help us ensures we reserve your seat and arrange the right amount of food. Your response means a lot and helps us avoid unnecessary costs and waste.</p>
+                <p>We kindly ask for your reservation to help us ensures we reserve your seat and arrange the right amount of food. Your response means a lot and helps us avoid unnecessary costs and waste.</p>
                 <a class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4 mb-5" href="https://forms.gle/YmWBRcG37FFUWKwH8">Confirm Attendance</a>
                 <h6 class="text-uppercase text-primary mb-5" style="letter-spacing: 3px;">or SCAN QR CODE</h6>
                 <!-- QR Code Image -->
@@ -374,7 +377,8 @@
             <div class="section-title position-relative text-center">
                 <h1 class="font-secondary display-3 text-white">Thank You</h1>
                 <i class="far fa-heart text-white"></i>
-            </div>
+             </div>
+            <h1 class="font-secondary display-3 text-white">Save the Date</h1>
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -386,8 +390,7 @@
                 <span class="px-3">|</span>
                 <p class="text-white" href="#">09362360919</p>
             </div>
-            <p class="m-0">&copy;  Enhanced by Kate Danica Baul. Designed by <a class="text-primary" href="https://freewebsitecode.com">Free Website Code</a>
-            </p>
+            <p class="m-0">&copy;  Enhanced by Kate Danica Baul. </p>
         </div>
     </div>
     <!-- Footer End -->
